Bug 107069 - PIVOT CHARTS: Mouse turns to "move" pointer when hovering filter buttons
Summary: PIVOT CHARTS: Mouse turns to "move" pointer when hovering filter buttons
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks: Pivot-Chart
  Show dependency treegraph
 
Reported: 2017-04-10 14:10 UTC by bureautiquelibre
Modified: 2017-04-27 13:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bureautiquelibre 2017-04-10 14:10:12 UTC
Mouse pointer shouldn't display "move" as filter buttons cannot be moved.
Comment 1 raal 2017-04-11 15:49:12 UTC
Reproducible.Version: 5.4.0.0.alpha0+
Build ID: eefe13c77d01be37c911e75af191717a944fedb3
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-04-10_23:53:03
Comment 2 Commit Notification 2017-04-20 14:11:53 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d30d50e2fdb84b572706f264237db5220ef17e38

tdf#107069 don't show "move" cursor on field buttons

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 bureautiquelibre 2017-04-27 13:13:56 UTC
Fix confirmed

Version: 5.4.0.0.alpha0+ (x64)
Build ID: e4f28aea21ce7e8f960cc2062f83715549be215e
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2017-04-25_02:04:15
Locale: fr-FR (fr_FR); Calc: CL