tdf#107069 don't show "move" cursor on field buttons

Change-Id: I332cc7522eb98345d34cb411642189262d97744c